<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="inbox_push_message_event">greenely.greenely._events.INBOX</string>
    <string name="inbox_push_message_dismissed_event">
        greenely.greenely._events.INBOX_NOTIFICATION_DISMISSED
    </string>
    <string name="inbox_push_message_clicked_event">
        greenely.greenely._events.INBOX_NOTIFICATION_CLICKED_EVENT
    </string>
    <string name="appsflyer_dev_key">7dNDqsDs3eXbg3hhCjzpsZ</string>
    <string name="unexpected_error">Oväntat fel</string>
    <string name="email">E-postaddress</string>
    <string name="password">Lösenord</string>
    <string name="create_account">Skapa ett konto</string>
    <string name="create_account2">Skapa konto</string>
    <string name="okay">Okej</string>
    <string name="uploading_signature">Skickar signatur</string>
    <string name="i_accept">Genom att skapa ett konto \ngodkänner du <font color="#1caa2f">användarvillkoren</font></string>
    <string name="user_agreement">Användarvillkor</string>
    <string name="provide_email_and_password">Ange e-postadress och lösenord</string>
    <string name="provide_email_and_choose_password">Ange en e-postadress och ett \nvalfritt lösenord.</string>
    <string name="yes">Ja</string>
    <string name="no">Nej</string>
    <string name="no_thank_you">Nej tack</string>
    <string name="kWh">kWh</string>
    <string name="x_percent_done">%d%% klar</string>
    <string name="next">Nästa</string>
    <string name="message">Meddelande</string>
    <string name="faq">Frågor och svar</string>
    <string name="help">Hjälp</string>
    <string name="back">Tillbaka</string>
    <string name="done">Klar</string>
    <string name="firstname">Förnamn</string>
    <string name="lastname">Efternamn</string>
    <string name="social_security_number">Personnummer (ååmmdd-xxxx)</string>
    <string name="facility_id">Anläggnings-ID</string>
    <string name="invalid_input">Ogiltigt värde</string>
    <string name="abort">Avbryt</string>
    <string name="verification_error">
        Det uppstod ett problem vid verifieringen.
        Detta kan bero på att du redan har registrerat ett konto med samma bankID. Kontrollera att
        du inte redan har ett konto registrerat.
        Du kan återkomma till den här vyn genom att logga in igen.
    </string>
    <string name="undo">Ångra</string>
    <string name="draw_the_signature">Dra med fingret på skärmen och skriv din signatur.</string>
    <string name="read_poa">Visa fullmakt</string>
    <string name="signature_title">Signera</string>
    <string name="home_title">Hem</string>
    <string name="compete_friend_title">Vänner</string>
    <string name="do_you_need_help">Behöver du hjälp?</string>
    <string name="are_you_sure_abort_title">På väg att avbryta?</string>
    <string name="are_you_sure_abort_message">
        Är du säker på att du vill avbryta?
        \n\nDu kan återvända till det här steget genom att logga in igen.
    </string>
    <string name="facility_id_clarification">
        Ange anläggningsID (18 siffror) står på elfakturan
    </string>
    <string name="forgot_password">Glömt lösenord?</string>
    <string name="provide_email">Ange din e-post nedan</string>
    <string name="provide_email_clarification">
        Vi skickar ett e-postmeddelande med ditt användarnamn och länk där du kan återställa ditt lösenord.
    </string>
    <string name="reset">Återställ</string>
    <string name="reset_password">Återställ lösenord</string>
    <string name="password_reset">
        Ett e-postmeddelande har skickats till dig med länk för återställning av lösenord.
    </string>
    <string name="password_reset_title">E-post skickat!</string>
    <string name="hour">Timme</string>
    <string name="day">Dag</string>
    <string name="month">Månad</string>
    <string name="temperature">temperatur</string>
    <string name="ore_per_kwh">öre/kWh</string>
    <string name="municipality">Kommun</string>
    <string name="my_household">Mitt hushåll</string>
    <string name="household">hushåll</string>
    <string name="loading">
        Laddar…
    </string>
    <string name="loading_profile">Vi bygger nu din profil..</string>
    <string name="yearly_consumption">
        Årsanvändning
    </string>
    <string name="yearly_consumption_clarification">
        Ange årsanvändning som finns på elfakturan
    </string>
    <string name="first_name_clarification">
        Ange förnamnet som står på elfakturan
    </string>
    <string name="last_name_clarification">
        Ange efternamnet som står på elfakturan
    </string>
    <string name="social_security_code_clarification">
        Ange personnumret som står på elfakturan
    </string>
    <string name="open_drawer">
        Open drawer
    </string>
    <string name="close_drawer">
        Close drawer
    </string>
    <string name="my_account">Mitt konto</string>
    <string name="current_password">Nuvarande lösenord</string>
    <string name="new_password">Nytt lösenord</string>
    <string name="repeat_password">Upprepa lösenord</string>
    <string name="user_firstName">Förnamn</string>
    <string name="user_lastName">Efternamn</string>
    <string name="password_has_been_changed">Vi har nu bytt ditt lösenord.</string>
    <string name="password_changed">Lösenord ändrat</string>
    <string name="change_password">Byt lösenord</string>
    <string name="upgrade_label">Uppgradera</string>
    <string name="upgrade_title">Bli elkund hos Greenely</string>
    <string name="upgrade_sub_title">Få full funktionalitet i appen!</string>
    <string name="history">Historik</string>
    <string name="energy_savings_tips">Sparaktiviteter</string>
    <string name="yesterday">Igår</string>
    <string name="inbox">Händelser</string>
    <string name="logout">Logga ut</string>
    <string name="unexpected_error_title">Oväntat fel</string>
    <string name="oops">Oops!</string>
    <string name="you_need_a_pdf_reader">
        Du behöver en PDF läsare installerad för att öppna filen
    </string>
    <string name="explore_my_household">Mitt hem</string>
    <string name="explore_neighbor">Grannen</string>
    <string name="explore_most_efficient">Topp 20%</string>
    <string name="forgot_password_title">Glömt lösenord</string>
    <string name="show_more">Visa mer</string>
    <string name="signature_clarification">
        Hej!
        \n\nFör att hämta din elanvändning löpande behöver vi ditt anläggnings-ID. Det står på din
        elräkning eller på ditt elbolags inloggade websidor. Om du betalar din elräkning via
        e-faktura kan du även hitta ditt anläggnings-ID på fakturan i din internetbank.
        \n\nOm du själv inte står på elavtalet är det inte ett hinder: låt den personen som tar
        emot elräkningen signera fullmakten här i appen!
        \n\nSigneringen görs med fingret direkt på skärmen när du matat in uppgifterna som du hittar
        på elräkningen.
    </string>
    <string name="fetch_data">Hämta data</string>
    <string name="support">Support</string>
    <string name="sign_next_step">Skriv under med fingret i nästa steg!</string>
    <string name="sign_poa_title">Tillåtelse att hämta din elanvändningsdata.</string>
    <string name="login">Logga in</string>
    <string name="onwards">Vidare</string>
    <string name="fetch">Hämta</string>
    <string name="debug_write_key">4O7KHauTNL6wtw1enGiXMLHi4zHqHwYi</string>
    <string name="facility_id_pre_fill">735 999</string>
    <string name="is_info_correct_title">Stämmer uppgifterna?</string>
    <string name="is_info_correct_message">
        Kontrollera noga att du har skrivit in rätt anläggningsID och att namnet
        stämmer överens med det som står på elfakturan
    </string>
    <string name="proceed">Nästa</string>
    <string name="sign_with_bankid">Signera med BankID</string>
    <string name="check">Kontrollera</string>
    <plurals name="new_messages">
        <item quantity="zero">Inga nya meddelanden</item>
        <item quantity="one">Nytt meddelande</item>
        <item quantity="other">%d nya medelanden</item>
    </plurals>
    <plurals name="plus_unread">
        <item quantity="zero">Inga olästa</item>
        <item quantity="one">+%d oläst</item>
        <item quantity="other">+%d olästa</item>
    </plurals>
    <string name="cont_chevron_right">Pil höger</string>
    <string name="facility_type">Bostadstyp</string>
    <string name="heating_type">Värmesystem</string>
    <string name="construction_year">Byggår</string>
    <string name="occupants">Personer</string>
    <string name="facility_area">Boarea (m\u00B2)</string>
    <string name="facility_area_setting_label">Boarea</string>
    <string name="empty_input_title">Kan ej lämnas tom</string>
    <string name="please_choose_x">Vänligen välj %s</string>
    <string name="please_check_municipality">
        Vänligen säkerställ att du inte lämnar textfältet tomt och att du fyller i rätt kommun.
    </string>
    <string name="onboarding_clarification">
        Vi behöver ställa några frågor om ditt boende för att kunna ge dig anpassade
        energispartips, preliminär elanvändning, jämförelsedata m.m.
    </string>
    <string name="onboarding_wallpaper">
        Mitt hushåll bakgrund
    </string>
    <string name="building_your_profile">
        Vi bygger nu din profil
    </string>
    <string name="user_agreement_error_title">
        Har du läst användarvillkoren?
    </string>
    <string name="user_agreement_error_message">
        Du måste godkänna användarvillkoren för att skapa ett konto.
    </string>
    <string name="repeat_email">Upprepa e-post</string>
    <string name="email_error_title">
        E-post ej korrekt
    </string>
    <string name="repeat_email_error_message">
        Upprepad e-post stämmer inte överens med inmatad e-post
    </string>
    <string name="email_empty_error_message">
        Vänligen fyll i din e-post.
    </string>
    <string name="tight_angle">ca 0–10°</string>
    <string name="medium_angle">ca 11–30°</string>
    <string name="wide_angle">ca 31–60°</string>
    <string name="tight_angle_title">Flackt</string>
    <string name="medium_angle_title">Medel</string>
    <string name="wide_angle_title">Brant</string>
    <string name="roof_angle_title">Takets lutning</string>
    <string name="roof_angle_description">
        Ange ditt taks ungefärliga lutning nedan.
    </string>
    <string name="roof_direction_title">Takets riktning</string>
    <string name="roof_direction_label">Välj det alternativ som är närmast</string>
    <string name="roof_direction_description">
        Ange takytans ungefärliga riktning
    </string>
    <string name="roof_direction_description2">(välj den sida som har mest sol)</string>
    <string name="west">Väster</string>
    <string name="south_west">Sydväst</string>
    <string name="south">Söder</string>
    <string name="south_east">Sydost</string>
    <string name="east">Öster</string>
    <string name="west_label">V</string>
    <string name="south_west_label">SV</string>
    <string name="south_label">S</string>
    <string name="south_east_label">SÖ</string>
    <string name="east_label">Ö</string>
    <string name="inspiration">Vänner</string>
    <string name="solar_analysis_roof_angle_caption">Välj det alternativ som är närmast</string>
    <string name="household_profile">BOSTAD</string>
    <string name="retail_icon_title">Elavtal</string>
    <string name="retail_bankid_description1">1. Öppna <b>BankID</b> i den mobil som är kopplat till angivet personnummer.</string>
    <string name="retail_bankid_description2">2. Skriv in din säkerhetskod i <b>BankID</b> appen.</string>
    <string name="retail_bankid_description3">3. Klicka på <b>Legitimera</b>.</string>
    <string name="retail_bankid_description4">4. I appen kommer snart ett meddelande visa att du har registrerat dig som kund.</string>
    <string name="retail_bankid_cancel">Avbryt BankID</string>
</resources>