<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="greenely.greenely.solaranalysis.ui.householdinfo.SolarAnalysisViewModel"/>
    </data>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <RadioGroup
                android:id="@+id/angleOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:orientation="horizontal"
                android:checkedButton="@={viewModel.householdInfo.roofAngleId}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_default="wrap"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="1.0">


                <org.grunkspin.subtitleradiobutton.SubtitleRadioButton
                    android:id="@+id/tightAngle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableBottom="?android:attr/listChoiceIndicatorSingle"
                    android:textAlignment="center"
                    app:subtitleText="@string/tight_angle"
                    app:subtitleTextAppearance="@style/TextAppearance.Body1"
                    app:titleText="@string/tight_angle_title"
                    app:titleTextAppearance="@style/TextAppearance.Body3" />

                <org.grunkspin.subtitleradiobutton.SubtitleRadioButton
                    android:id="@+id/mediumAngle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:layout_weight="1"
                    android:drawableBottom="?android:attr/listChoiceIndicatorSingle"
                    android:padding="8dp"
                    android:textAlignment="center"
                    app:subtitleText="@string/medium_angle"
                    app:subtitleTextAppearance="@style/TextAppearance.Body1"
                    app:titleText="@string/medium_angle_title"
                    app:titleTextAppearance="@style/TextAppearance.Body3" />

                <org.grunkspin.subtitleradiobutton.SubtitleRadioButton
                    android:id="@+id/wideAngle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:button="@null"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:drawableBottom="?android:attr/listChoiceIndicatorSingle"
                    app:subtitleText="@string/wide_angle"
                    app:subtitleTextAppearance="@style/TextAppearance.Body1"
                    app:titleText="@string/wide_angle_title"
                    app:titleTextAppearance="@style/TextAppearance.Body3" />

            </RadioGroup>

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/roof_angle_title"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/description"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:text="@string/roof_angle_description"
                android:textAppearance="@style/TextAppearance.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:layout_constraintBottom_toTopOf="@id/image_layout"
                />

            <LinearLayout
                android:id="@+id/image_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                app:layout_constraintBottom_toTopOf="@id/textView35"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/roof_angle_default" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:padding="8dp"
                android:textAlignment="center"
                android:text="@string/solar_analysis_roof_angle_caption"
                android:textAppearance="@style/TextAppearance.Label"
                app:layout_constraintBottom_toTopOf="@+id/angleOptions"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
