<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_round_corners"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_round_corners"
                android:orientation="vertical"
                android:padding="25dp">

                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mobilt BankID"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#222222"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:lineSpacingExtra="4sp"
                    android:text="@string/retail_bankid_description1"
                    android:textColor="#4e4e4e"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:lineSpacingExtra="4sp"
                    android:text="@string/retail_bankid_description2"
                    android:textColor="#4e4e4e"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:lineSpacingExtra="4sp"
                    android:text="@string/retail_bankid_description3"
                    android:textColor="#4e4e4e"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:lineSpacingExtra="4sp"
                    android:text="@string/retail_bankid_description4"
                    android:textColor="#4e4e4e"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/canceldButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="28dp"
                    android:background="@drawable/bank_id_button"
                    android:elevation="15dp"
                    android:text="@string/retail_bankid_cancel"
                    android:textColor="#25c672" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>